--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.bgimage{
+  background-image: url(./Assets/4.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-width: 100vw;
+}
+
+.PageTitle{
   color: white;
+  font-size: 85px;
+  font-style: italic;
+  text-align: center;
+  margin-top: 12%;
 }
 
-.App-link {
-  color: #61dafb;
+.Button1{
+  font-size: 30px !important;
+  font-style: italic;
+  width: 25%;
+  color: #0702FF;
+  border-radius: 15px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-format{
+  color:white;
+  font-size: 25px;
+  font-style: italic;
 }
+
