--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,13 @@
   color:white;
   font-size: 25px;
   font-style: italic;
+  text-decoration: none;
 }
+
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+}
+
+
 
