--- a/src/Components/LoginComponent/UsersLogin.css
+++ b/src/Components/LoginComponent/UsersLogin.css
@@ -16,3 +16,64 @@
     background-color: #0D6EFD !important;
     height: 45PX !important;
 }
+
+
+
+@media screen and (max-width: 390px) {
+    .PageTitle {
+        color: white;
+        font-size: 45px;
+        font-style: italic;
+        text-align: center;
+        margin-top: 45%;
+    }
+
+    .Button1 {
+        font-size: 20px !important;
+        font-style: italic;
+        width: 55%;
+        color: #0702FF;
+        border-radius: 15px !important;
+    }
+
+    .bg{
+        color:White !important;
+        font-size: 20px !important;
+        font-style: italic !important;
+        background-color: #0D6EFD !important;
+        height: 45PX !important;
+        
+    }
+
+
+}
+
+@media screen and (max-width: 820px) {
+  
+    .PageTitle {
+        color: white;
+        font-size: 45px;
+        font-style: italic;
+        text-align: center;
+        margin-top: 45%;
+    }
+
+    .Button1 {
+        font-size: 20px !important;
+        font-style: italic;
+        width: 35%;
+        color: #0702FF;
+        border-radius: 15px !important;
+    }
+    
+    .bg{
+        color:White !important;
+        font-size: 20px !important;
+        font-style: italic !important;
+        background-color: #0D6EFD !important;
+        height: 45PX !important;
+        
+    }
+
+
+}
