--- a/src/Components/LoginComponent/UsersLogin.css
+++ b/src/Components/LoginComponent/UsersLogin.css
@@ -15,7 +15,7 @@
     font-style: italic !important;
     background-color: #0D6EFD !important;
     height: 45PX !important;
-    width: 45% !important;
+    width: 35% !important;
 
 }
 
@@ -38,7 +38,7 @@
         border-radius: 15px !important;
     }
 
-    .bg{
+    .bg2{
         color:White !important;
         font-size: 20px !important;
         font-style: italic !important;
@@ -46,8 +46,6 @@
         height: 45PX !important;
         width: 55% !important;
     }
-
-
 }
 
 @media screen and (max-width: 820px) {
@@ -74,8 +72,7 @@
         font-style: italic !important;
         background-color: #0D6EFD !important;
         height: 45PX !important;
-        width: 45% !important;
-
+        width: 60% !important;
     }
 
 
